# ppm-greyscale-blur

./: CMakeLists.txt  README.md
modified_images/: borabora_1_blr.ppm  borabora_1_gs.ppm  borabora_2_blr.ppm  borabora_2_gs.ppm  car_1_blr.ppm  car_1_gs.ppm  car_2_blr.ppm  car_2_gs.ppm  post_1_blr.ppm  post_1_gs.ppm  post_2_blr.ppm  post_2_gs.ppm
scripts/: image.hpp  main.cpp
